--- a/index.html
+++ b/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+
 <body>
+  <main>
+    <header>
+      <img src="./images/logo.svg" alt="logo" />
+      <ul>
+        <li class="flex-center">
+          <img src="./images/icon-document.svg" />
+        </li>
+        <li class="flex-center">
+          <img src="./images/icon-folder.svg" />
+        </li>
+        <li class="flex-center">
+          <img src="./images/icon-upload.svg" />
+        </li>
+      </ul>
 
-  You’ve used 815 GB of your storage
+    </header>
+    <section class="data">
+      <p class="status-text">You’ve used <span class="bold"> 815 GB</span> of your storage</p>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
+      <div class="meter-container">
+        <div class='outer-meter'>
+          <div class='meter'></div>
+        </div>
+        <div class='labels'>
+          <p class="bold">0 GB</p>
+          <p class="bold">1000 GB</p>
+        </div>
+      </div>
+
+      <div class="data-text flex-center">
+        <p class='description flex-center'><span class="big-bold">185</span> GB LEFT</p>
+      </div>
+
+    </section>
+
+
+  </main>
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="index.js"></script>
+
 </html>
