--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
       <img src="./images/logo.svg" alt="logo" />
       <ul>
         <li class="flex-center">
-          <img src="./images/icon-document.svg" />
+          <img src="./images/icon-document.svg" alt="file" />
         </li>
         <li class="flex-center">
-          <img src="./images/icon-folder.svg" />
+          <img src="./images/icon-folder.svg" alt='folder' />
         </li>
         <li class="flex-center">
-          <img src="./images/icon-upload.svg" />
+          <img src="./images/icon-upload.svg" alt='upload' />
         </li>
       </ul>
 
     </header>
     <section class="data">
-      <p class="status-text">You’ve used <span class="bold"> 815 GB</span> of your storage</p>
+      <h1 class="status-text">You’ve used <span class="bold"> 815 GB</span> of your storage</h1>
 
       <div class="meter-container">
         <div class='outer-meter'>
